# Twitch-Pong

./: .gitignore  CMakeLists.txt  PingPong.sln  README  derivation.nix  shell.nix
PingPong/: PingPong.vcxproj  PingPong.vcxproj.filters  ball.cpp  ball.h  irctwitch.cpp  irctwitch.h  main.cpp  player.cpp  player.h  stage.cpp  stage.h
